apicast-qa/deploymentconfigs.apps.openshift.io.yaml
apiVersion: v1
items:
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    annotations:
      openshift.io/backup-registry-hostname: docker-registry.default.svc:5000
      openshift.io/backup-server-version: "1.11"
      openshift.io/generated-by: OpenShiftNewApp
      openshift.io/migration-registry: ""
      openshift.io/restore-registry-hostname: image-registry.openshift-image-registry.svc:5000
      openshift.io/restore-server-version: "1.23"
    creationTimestamp: "2023-05-22T19:34:12Z"
    generation: 2
    labels:
      app: 3scale-gateway
      migration.openshift.io/migrated-by-migmigration: 6370f9ef-9094-4ec9-a97a-4fe1ea2a31b6
      migration.openshift.io/migrated-by-migplan: 49805066-245d-4e4f-b6c5-23226a4d9ae4
      velero.io/backup-name: migration-8ef63-initial-xnl4l
      velero.io/restore-name: migration-8ef63-final-47pbw
    name: apicast-live-qa
    namespace: apicast-qa
    resourceVersion: "490990254"
    uid: ac92b70a-5dcd-4893-9f62-d6cc3304f1cd
  spec:
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      deploymentconfig: apicast-live-qa
    strategy:
      activeDeadlineSeconds: 21600
      resources: {}
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
          prometheus.io/port: "9421"
          prometheus.io/scrape: "true"
        creationTimestamp: null
        labels:
          app: 3scale-gateway
          deploymentconfig: apicast-live-qa
      spec:
        containers:
        - env:
          - name: THREESCALE_PORTAL_ENDPOINT
            valueFrom:
              secretKeyRef:
                key: password
                name: apicast-configuration-url-secret
          - name: THREESCALE_CONFIG_FILE
          - name: THREESCALE_DEPLOYMENT_ENV
            value: production
          - name: RESOLVER
          - name: APICAST_SERVICES_LIST
          - name: APICAST_CONFIGURATION_LOADER
            value: boot
          - name: APICAST_LOG_LEVEL
            value: debug
          - name: APICAST_PATH_ROUTING
            value: "false"
          - name: APICAST_RESPONSE_CODES
            value: "false"
          - name: APICAST_CONFIGURATION_CACHE
          - name: REDIS_URL
          - name: APICAST_MANAGEMENT_API
            value: status
          - name: OPENSSL_VERIFY
            value: "false"
          - name: APICAST_OIDC_LOG_LEVEL
            value: debug
          image: registry.redhat.io/3scale-amp2/apicast-gateway-rhel7:3scale2.7
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /status/live
              port: management
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          name: apicast-live-qa
          ports:
          - containerPort: 8080
            name: proxy
            protocol: TCP
          - containerPort: 8090
            name: management
            protocol: TCP
          - containerPort: 9421
            name: metrics
            protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /status/ready
              port: management
              scheme: HTTP
            initialDelaySeconds: 15
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: "1"
              memory: 128Mi
            requests:
              cpu: 500m
              memory: 64Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
    test: false
    triggers:
    - type: ConfigChange
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2023-05-25T18:11:11Z"
      lastUpdateTime: "2023-05-25T18:11:11Z"
      message: replication controller "apicast-live-qa-2" successfully rolled out
      reason: NewReplicationControllerAvailable
      status: "True"
      type: Progressing
    - lastTransitionTime: "2024-07-31T17:03:34Z"
      lastUpdateTime: "2024-07-31T17:03:34Z"
      message: Deployment config has minimum availability.
      status: "True"
      type: Available
    details:
      causes:
      - type: Manual
      message: manual change
    latestVersion: 2
    observedGeneration: 2
    readyReplicas: 1
    replicas: 1
    unavailableReplicas: 0
    updatedReplicas: 1
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    annotations:
      openshift.io/backup-registry-hostname: docker-registry.default.svc:5000
      openshift.io/backup-server-version: "1.11"
      openshift.io/generated-by: OpenShiftNewApp
      openshift.io/migration-registry: ""
      openshift.io/restore-registry-hostname: image-registry.openshift-image-registry.svc:5000
      openshift.io/restore-server-version: "1.23"
    creationTimestamp: "2023-05-22T19:34:12Z"
    generation: 2
    labels:
      app: 3scale-gateway
      migration.openshift.io/migrated-by-migmigration: 6370f9ef-9094-4ec9-a97a-4fe1ea2a31b6
      migration.openshift.io/migrated-by-migplan: 49805066-245d-4e4f-b6c5-23226a4d9ae4
      velero.io/backup-name: migration-8ef63-initial-xnl4l
      velero.io/restore-name: migration-8ef63-final-47pbw
    name: apicast-staging-qa
    namespace: apicast-qa
    resourceVersion: "466147414"
    uid: 41f98c8d-93c9-4fba-bae5-8111a7693ff2
  spec:
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      deploymentconfig: apicast-staging-qa
    strategy:
      activeDeadlineSeconds: 21600
      resources: {}
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
          prometheus.io/port: "9421"
          prometheus.io/scrape: "true"
        creationTimestamp: null
        labels:
          app: 3scale-gateway
          deploymentconfig: apicast-staging-qa
      spec:
        containers:
        - env:
          - name: THREESCALE_PORTAL_ENDPOINT
            valueFrom:
              secretKeyRef:
                key: password
                name: apicast-configuration-url-secret
          - name: THREESCALE_CONFIG_FILE
          - name: THREESCALE_DEPLOYMENT_ENV
            value: sandbox
          - name: RESOLVER
          - name: APICAST_SERVICES_LIST
          - name: APICAST_CONFIGURATION_LOADER
            value: lazy
          - name: APICAST_LOG_LEVEL
            value: debug
          - name: APICAST_PATH_ROUTING
            value: "false"
          - name: APICAST_RESPONSE_CODES
            value: "true"
          - name: APICAST_CONFIGURATION_CACHE
            value: "0"
          - name: REDIS_URL
          - name: APICAST_MANAGEMENT_API
            value: status
          - name: OPENSSL_VERIFY
            value: "false"
          image: registry.redhat.io/3scale-amp2/apicast-gateway-rhel7:3scale2.7
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /status/live
              port: management
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          name: apicast-staging-qa
          ports:
          - containerPort: 8080
            name: proxy
            protocol: TCP
          - containerPort: 8090
            name: management
            protocol: TCP
          - containerPort: 9421
            name: metrics
            protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /status/ready
              port: management
              scheme: HTTP
            initialDelaySeconds: 15
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: "1"
              memory: 128Mi
            requests:
              cpu: 500m
              memory: 64Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
    test: false
    triggers:
    - type: ConfigChange
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2023-05-25T18:11:19Z"
      lastUpdateTime: "2023-05-25T18:11:19Z"
      message: replication controller "apicast-staging-qa-2" successfully rolled out
      reason: NewReplicationControllerAvailable
      status: "True"
      type: Progressing
    - lastTransitionTime: "2024-07-19T19:18:51Z"
      lastUpdateTime: "2024-07-19T19:18:51Z"
      message: Deployment config has minimum availability.
      status: "True"
      type: Available
    details:
      causes:
      - type: Manual
      message: manual change
    latestVersion: 2
    observedGeneration: 2
    readyReplicas: 1
    replicas: 1
    unavailableReplicas: 0
    updatedReplicas: 1
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
