apicast-qa/endpoints.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Endpoints
  metadata:
    annotations:
      endpoints.kubernetes.io/last-change-trigger-time: "2024-07-31T17:03:34Z"
    creationTimestamp: "2023-05-22T19:34:12Z"
    labels:
      app: 3scale-gateway
      migration.openshift.io/migrated-by-migmigration: 6370f9ef-9094-4ec9-a97a-4fe1ea2a31b6
      migration.openshift.io/migrated-by-migplan: 49805066-245d-4e4f-b6c5-23226a4d9ae4
      velero.io/backup-name: migration-8ef63-initial-xnl4l
      velero.io/restore-name: migration-8ef63-final-47pbw
    name: apicast-live-qa
    namespace: apicast-qa
    resourceVersion: "490990253"
    uid: 15f6ecc5-7493-4888-9b55-32a1f6db02c6
  subsets:
  - addresses:
    - ip: 10.131.22.243
      nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth3-vmmxw
      targetRef:
        kind: Pod
        name: apicast-live-qa-2-qfdlh
        namespace: apicast-qa
        resourceVersion: "490990250"
        uid: 65e0d7f7-4563-426a-924d-919d29212cc2
    ports:
    - name: management
      port: 8090
      protocol: TCP
    - name: proxy
      port: 8080
      protocol: TCP
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-05-22T19:34:12Z"
    labels:
      app: 3scale-gateway
      migration.openshift.io/migrated-by-migmigration: 6370f9ef-9094-4ec9-a97a-4fe1ea2a31b6
      migration.openshift.io/migrated-by-migplan: 49805066-245d-4e4f-b6c5-23226a4d9ae4
      velero.io/backup-name: migration-8ef63-initial-xnl4l
      velero.io/restore-name: migration-8ef63-final-47pbw
    name: apicast-staging-qa
    namespace: apicast-qa
    resourceVersion: "466147410"
    uid: 1a89abba-4bba-4e14-bd84-885d0dded273
  subsets:
  - addresses:
    - ip: 10.131.22.107
      nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth3-vmmxw
      targetRef:
        kind: Pod
        name: apicast-staging-qa-2-8trf7
        namespace: apicast-qa
        resourceVersion: "466147405"
        uid: cfe8a4d1-20a1-49cf-988f-b16830004537
    ports:
    - name: management
      port: 8090
      protocol: TCP
    - name: proxy
      port: 8080
      protocol: TCP
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
