apicast-qa/endpointslices.discovery.k8s.io.yaml
apiVersion: v1
items:
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints:
  - addresses:
    - 10.131.22.243
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth3-vmmxw
    targetRef:
      kind: Pod
      name: apicast-live-qa-2-qfdlh
      namespace: apicast-qa
      resourceVersion: "490990250"
      uid: 65e0d7f7-4563-426a-924d-919d29212cc2
    zone: brazilsouth-3
  kind: EndpointSlice
  metadata:
    annotations:
      endpoints.kubernetes.io/last-change-trigger-time: "2024-07-31T17:03:34Z"
    creationTimestamp: "2023-05-22T19:34:13Z"
    generateName: apicast-live-qa-
    generation: 100
    labels:
      app: 3scale-gateway
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: apicast-live-qa
      migration.openshift.io/migrated-by-migmigration: 6370f9ef-9094-4ec9-a97a-4fe1ea2a31b6
      migration.openshift.io/migrated-by-migplan: 49805066-245d-4e4f-b6c5-23226a4d9ae4
      velero.io/backup-name: migration-8ef63-initial-xnl4l
      velero.io/restore-name: migration-8ef63-final-47pbw
    name: apicast-live-qa-555lq
    namespace: apicast-qa
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: apicast-live-qa
      uid: 203e3251-34c9-45ff-bfec-998a44788817
    resourceVersion: "490990259"
    uid: e8cfbec7-cc79-4022-8466-dd4ec61acbb2
  ports:
  - name: proxy
    port: 8080
    protocol: TCP
  - name: management
    port: 8090
    protocol: TCP
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints:
  - addresses:
    - 10.131.22.107
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth3-vmmxw
    targetRef:
      kind: Pod
      name: apicast-staging-qa-2-8trf7
      namespace: apicast-qa
      resourceVersion: "466147405"
      uid: cfe8a4d1-20a1-49cf-988f-b16830004537
    zone: brazilsouth-3
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-22T19:34:13Z"
    generateName: apicast-staging-qa-
    generation: 36
    labels:
      app: 3scale-gateway
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: apicast-staging-qa
      migration.openshift.io/migrated-by-migmigration: 6370f9ef-9094-4ec9-a97a-4fe1ea2a31b6
      migration.openshift.io/migrated-by-migplan: 49805066-245d-4e4f-b6c5-23226a4d9ae4
      velero.io/backup-name: migration-8ef63-initial-xnl4l
      velero.io/restore-name: migration-8ef63-final-47pbw
    name: apicast-staging-qa-prhk4
    namespace: apicast-qa
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: apicast-staging-qa
      uid: a26278d2-dc55-4237-b9bb-61e87df11d61
    resourceVersion: "466147407"
    uid: ed6cb18e-2369-4d94-9ac6-23204dc24b61
  ports:
  - name: proxy
    port: 8080
    protocol: TCP
  - name: management
    port: 8090
    protocol: TCP
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
