apicast-qa/routes.route.openshift.io.yaml
apiVersion: v1
items:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      haproxy.router.openshift.io/timeout: 300s
    creationTimestamp: "2023-05-22T19:34:12Z"
    labels:
      app: 3scale-gateway
      migration.openshift.io/migrated-by-migmigration: 6370f9ef-9094-4ec9-a97a-4fe1ea2a31b6
      migration.openshift.io/migrated-by-migplan: 49805066-245d-4e4f-b6c5-23226a4d9ae4
      velero.io/backup-name: migration-8ef63-initial-xnl4l
      velero.io/restore-name: migration-8ef63-final-47pbw
    name: libroremuneraciones-live
    namespace: apicast-qa
    resourceVersion: "9197536"
    uid: 29ac4633-25f9-443c-a685-0d459ae6c5e9
  spec:
    host: libroremuneraciones-live-qa.api.dirtrab.cl
    port:
      targetPort: proxy
    tls:
      caCertificate: |
        -----BEGIN CERTIFICATE-----
        MIIGGTCCBAGgAwIBAgIQE31TnKp8MamkM3AZaIR6jTANBgkqhkiG9w0BAQwFADCB
[...]
        MntHWpdLgtJmwsQt6j8k9Kf5qLnjatkYYaA7jBU=
        -----END CERTIFICATE-----
      certificate: |
        -----BEGIN CERTIFICATE-----
        MIIHAzCCBeugAwIBAgIRAOFJjF2X3t8Io3XrgnCs7ckwDQYJKoZIhvcNAQELBQAw
[...]
        K/BoiKHmiPhYw9gbMIYl7qELU5BehE8=
        -----END CERTIFICATE-----
      key: |
        -----BEGIN RSA PRIVATE KEY-----
        MIIEpAIBAAKCAQEAyRZv6nUtOGBmALfAVtdmMQb5Jm51rc7CP7t0cw2peCwig1xC
[...]
        wq1nwN4xIyvJqfeVidr8Usc+jUzv86g1JNd129WSVsWILhL9h5u7xA==
        -----END RSA PRIVATE KEY-----
      termination: edge
    to:
      kind: Service
      name: apicast-live-qa
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-05-22T19:34:12Z"
        status: "True"
        type: Admitted
      host: libroremuneraciones-live-qa.api.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      haproxy.router.openshift.io/timeout: 300s
    creationTimestamp: "2023-05-22T19:34:12Z"
    labels:
      app: 3scale-gateway
      migration.openshift.io/migrated-by-migmigration: 6370f9ef-9094-4ec9-a97a-4fe1ea2a31b6
      migration.openshift.io/migrated-by-migplan: 49805066-245d-4e4f-b6c5-23226a4d9ae4
      velero.io/backup-name: migration-8ef63-initial-xnl4l
      velero.io/restore-name: migration-8ef63-final-47pbw
    name: libroremuneraciones-stagging
    namespace: apicast-qa
    resourceVersion: "9197540"
    uid: 99241447-c652-4fe6-a744-e17d2c6d5643
  spec:
    host: libroremuneraciones-stagging-qa.api.dirtrab.cl
    port:
      targetPort: proxy
    tls:
      caCertificate: |
        -----BEGIN CERTIFICATE-----
        MIIGGTCCBAGgAwIBAgIQE31TnKp8MamkM3AZaIR6jTANBgkqhkiG9w0BAQwFADCB
[...]
        MntHWpdLgtJmwsQt6j8k9Kf5qLnjatkYYaA7jBU=
        -----END CERTIFICATE-----
      certificate: |
        -----BEGIN CERTIFICATE-----
        MIIHAzCCBeugAwIBAgIRAOFJjF2X3t8Io3XrgnCs7ckwDQYJKoZIhvcNAQELBQAw
[...]
        K/BoiKHmiPhYw9gbMIYl7qELU5BehE8=
        -----END CERTIFICATE-----
      key: |
        -----BEGIN RSA PRIVATE KEY-----
        MIIEpAIBAAKCAQEAyRZv6nUtOGBmALfAVtdmMQb5Jm51rc7CP7t0cw2peCwig1xC
[...]
        wq1nwN4xIyvJqfeVidr8Usc+jUzv86g1JNd129WSVsWILhL9h5u7xA==
        -----END RSA PRIVATE KEY-----
      termination: edge
    to:
      kind: Service
      name: apicast-staging-qa
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-05-22T19:34:12Z"
        status: "True"
        type: Admitted
      host: libroremuneraciones-stagging-qa.api.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: "2023-05-22T19:34:12Z"
    labels:
      app: 3scale-gateway
      migration.openshift.io/migrated-by-migmigration: 6370f9ef-9094-4ec9-a97a-4fe1ea2a31b6
      migration.openshift.io/migrated-by-migplan: 49805066-245d-4e4f-b6c5-23226a4d9ae4
      velero.io/backup-name: migration-8ef63-initial-xnl4l
      velero.io/restore-name: migration-8ef63-final-47pbw
    name: lre-proxy-live
    namespace: apicast-qa
    resourceVersion: "9197542"
    uid: 3a141ba3-ea3a-4260-9ca9-1e28a772b7a7
  spec:
    host: lre-proxy-live-qa.api.dirtrab.cl
    port:
      targetPort: proxy
    tls:
      caCertificate: |
        -----BEGIN CERTIFICATE-----
        MIIGGTCCBAGgAwIBAgIQE31TnKp8MamkM3AZaIR6jTANBgkqhkiG9w0BAQwFADCB
[...]
        MntHWpdLgtJmwsQt6j8k9Kf5qLnjatkYYaA7jBU=
        -----END CERTIFICATE-----
      certificate: |
        -----BEGIN CERTIFICATE-----
        MIIHAzCCBeugAwIBAgIRAOFJjF2X3t8Io3XrgnCs7ckwDQYJKoZIhvcNAQELBQAw
[...]
        K/BoiKHmiPhYw9gbMIYl7qELU5BehE8=
        -----END CERTIFICATE-----
      key: |
        -----BEGIN RSA PRIVATE KEY-----
        MIIEpAIBAAKCAQEAyRZv6nUtOGBmALfAVtdmMQb5Jm51rc7CP7t0cw2peCwig1xC
[...]
        wq1nwN4xIyvJqfeVidr8Usc+jUzv86g1JNd129WSVsWILhL9h5u7xA==
        -----END RSA PRIVATE KEY-----
      termination: edge
    to:
      kind: Service
      name: apicast-live-qa
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-05-22T19:34:12Z"
        status: "True"
        type: Admitted
      host: lre-proxy-live-qa.api.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: "2023-05-22T19:34:12Z"
    labels:
      app: 3scale-gateway
      migration.openshift.io/migrated-by-migmigration: 6370f9ef-9094-4ec9-a97a-4fe1ea2a31b6
      migration.openshift.io/migrated-by-migplan: 49805066-245d-4e4f-b6c5-23226a4d9ae4
      velero.io/backup-name: migration-8ef63-initial-xnl4l
      velero.io/restore-name: migration-8ef63-final-47pbw
    name: lre-proxy-stagging
    namespace: apicast-qa
    resourceVersion: "9197544"
    uid: 349af0f7-0f0a-416b-8ee8-c80019cf99e4
  spec:
    host: lre-proxy-stagging-qa.api.dirtrab.cl
    port:
      targetPort: proxy
    tls:
      caCertificate: |
        -----BEGIN CERTIFICATE-----
        MIIGGTCCBAGgAwIBAgIQE31TnKp8MamkM3AZaIR6jTANBgkqhkiG9w0BAQwFADCB
[...]
        MntHWpdLgtJmwsQt6j8k9Kf5qLnjatkYYaA7jBU=
        -----END CERTIFICATE-----
      certificate: |
        -----BEGIN CERTIFICATE-----
        MIIHAzCCBeugAwIBAgIRAOFJjF2X3t8Io3XrgnCs7ckwDQYJKoZIhvcNAQELBQAw
[...]
        K/BoiKHmiPhYw9gbMIYl7qELU5BehE8=
        -----END CERTIFICATE-----
      key: |
        -----BEGIN RSA PRIVATE KEY-----
        MIIEpAIBAAKCAQEAyRZv6nUtOGBmALfAVtdmMQb5Jm51rc7CP7t0cw2peCwig1xC
[...]
        wq1nwN4xIyvJqfeVidr8Usc+jUzv86g1JNd129WSVsWILhL9h5u7xA==
        -----END RSA PRIVATE KEY-----
      termination: edge
    to:
      kind: Service
      name: apicast-staging-qa
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-05-22T19:34:12Z"
        status: "True"
        type: Admitted
      host: lre-proxy-stagging-qa.api.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      haproxy.router.openshift.io/timeout: 300s
    creationTimestamp: "2023-05-22T19:34:12Z"
    labels:
      app: 3scale-gateway
      migration.openshift.io/migrated-by-migmigration: 6370f9ef-9094-4ec9-a97a-4fe1ea2a31b6
      migration.openshift.io/migrated-by-migplan: 49805066-245d-4e4f-b6c5-23226a4d9ae4
      velero.io/backup-name: migration-8ef63-initial-xnl4l
      velero.io/restore-name: migration-8ef63-final-47pbw
    name: lre-services-live
    namespace: apicast-qa
    resourceVersion: "472163884"
    uid: b1130f1f-5887-4213-9490-732adc292e9b
  spec:
    host: lre-services-live-qa.api.dirtrab.cl
    port:
      targetPort: proxy
    tls:
      caCertificate: |
        -----BEGIN CERTIFICATE-----
        MIIGGTCCBAGgAwIBAgIQE31TnKp8MamkM3AZaIR6jTANBgkqhkiG9w0BAQwFADCB
[...]
        MntHWpdLgtJmwsQt6j8k9Kf5qLnjatkYYaA7jBU=
        -----END CERTIFICATE-----
      certificate: |
        -----BEGIN CERTIFICATE-----
        MIIHAzCCBeugAwIBAgIRAOFJjF2X3t8Io3XrgnCs7ckwDQYJKoZIhvcNAQELBQAw
[...]
        K/BoiKHmiPhYw9gbMIYl7qELU5BehE8=
        -----END CERTIFICATE-----
      key: |
        -----BEGIN RSA PRIVATE KEY-----
        MIIEpAIBAAKCAQEAyRZv6nUtOGBmALfAVtdmMQb5Jm51rc7CP7t0cw2peCwig1xC
[...]
        wq1nwN4xIyvJqfeVidr8Usc+jUzv86g1JNd129WSVsWILhL9h5u7xA==
        -----END RSA PRIVATE KEY-----
      termination: edge
    to:
      kind: Service
      name: apicast-live-qa
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-05-22T19:34:12Z"
        status: "True"
        type: Admitted
      host: lre-services-live-qa.api.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      haproxy.router.openshift.io/timeout: 300s
    creationTimestamp: "2023-05-22T19:34:12Z"
    labels:
      app: 3scale-gateway
      migration.openshift.io/migrated-by-migmigration: 6370f9ef-9094-4ec9-a97a-4fe1ea2a31b6
      migration.openshift.io/migrated-by-migplan: 49805066-245d-4e4f-b6c5-23226a4d9ae4
      velero.io/backup-name: migration-8ef63-initial-xnl4l
      velero.io/restore-name: migration-8ef63-final-47pbw
    name: lre-services-stagging
    namespace: apicast-qa
    resourceVersion: "9197548"
    uid: 3f748797-3eb0-4719-9ae0-3de8e3235bbc
  spec:
    host: lre-services-stagging-qa.api.dirtrab.cl
    port:
      targetPort: proxy
    tls:
      caCertificate: |
        -----BEGIN CERTIFICATE-----
        MIIGGTCCBAGgAwIBAgIQE31TnKp8MamkM3AZaIR6jTANBgkqhkiG9w0BAQwFADCB
[...]
        MntHWpdLgtJmwsQt6j8k9Kf5qLnjatkYYaA7jBU=
        -----END CERTIFICATE-----
      certificate: |
        -----BEGIN CERTIFICATE-----
        MIIHAzCCBeugAwIBAgIRAOFJjF2X3t8Io3XrgnCs7ckwDQYJKoZIhvcNAQELBQAw
[...]
        K/BoiKHmiPhYw9gbMIYl7qELU5BehE8=
        -----END CERTIFICATE-----
      key: |
        -----BEGIN RSA PRIVATE KEY-----
        MIIEpAIBAAKCAQEAyRZv6nUtOGBmALfAVtdmMQb5Jm51rc7CP7t0cw2peCwig1xC
[...]
        wq1nwN4xIyvJqfeVidr8Usc+jUzv86g1JNd129WSVsWILhL9h5u7xA==
        -----END RSA PRIVATE KEY-----
      termination: edge
    to:
      kind: Service
      name: apicast-staging-qa
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-05-22T19:34:12Z"
        status: "True"
        type: Admitted
      host: lre-services-stagging-qa.api.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
