apicast-qa/services.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: "2023-05-22T19:34:13Z"
    labels:
      app: 3scale-gateway
      migration.openshift.io/migrated-by-migmigration: 6370f9ef-9094-4ec9-a97a-4fe1ea2a31b6
      migration.openshift.io/migrated-by-migplan: 49805066-245d-4e4f-b6c5-23226a4d9ae4
      velero.io/backup-name: migration-8ef63-initial-xnl4l
      velero.io/restore-name: migration-8ef63-final-47pbw
    name: apicast-live-qa
    namespace: apicast-qa
    resourceVersion: "9197551"
    uid: 203e3251-34c9-45ff-bfec-998a44788817
  spec:
    clusterIP: 172.30.169.40
    clusterIPs:
    - 172.30.169.40
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: proxy
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: management
      port: 8090
      protocol: TCP
      targetPort: 8090
    selector:
      deploymentconfig: apicast-live-qa
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: "2023-05-22T19:34:13Z"
    labels:
      app: 3scale-gateway
      migration.openshift.io/migrated-by-migmigration: 6370f9ef-9094-4ec9-a97a-4fe1ea2a31b6
      migration.openshift.io/migrated-by-migplan: 49805066-245d-4e4f-b6c5-23226a4d9ae4
      velero.io/backup-name: migration-8ef63-initial-xnl4l
      velero.io/restore-name: migration-8ef63-final-47pbw
    name: apicast-staging-qa
    namespace: apicast-qa
    resourceVersion: "9197555"
    uid: a26278d2-dc55-4237-b9bb-61e87df11d61
  spec:
    clusterIP: 172.30.68.253
    clusterIPs:
    - 172.30.68.253
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: proxy
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: management
      port: 8090
      protocol: TCP
      targetPort: 8090
    selector:
      deploymentconfig: apicast-staging-qa
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
